--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class="skill">
             <h2>My skills</h2>
             <div class="skill-row">
-                <img class="webimg" src="https://cdn-icons.flaticon.com/png/128/2010/premium/2010957.png?token=exp=1647189044~hmac=69d57942b7dd2b5f698a51b49879ee01" alt="web-design">
+                <img class="webimg" src="images2/webdev.png" alt="web-design">
                 <h3>Web Designing</h3>
                 <p> Learning Web dev for something <strong>awesome</strong> coming up..</p>
             </div>
             <div class="skill-row">
-                <img class="camimg" src="https://cdn-icons.flaticon.com/png/128/3574/premium/3574996.png?token=exp=1647189504~hmac=feaf27132a964e30bc3e3e42f645e4ac" alt="photography" >
+                <img class="camimg" src="images2/photography.png" alt="photography" >
                 <h3>Photography</h3>
                 <p> Loves photography and getting better day by day.😉</p>
             </div>
