--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
         <div class="skill">
             <h2>My skills</h2>
             <div class="skill-row">
-                <img class="webimg" src="images2/webdev.png" alt="web-design">
+                <img class="webimg" src="images/webdev.png" alt="web-design">
                 <h3>Web Designing</h3>
                 <p> Learning Web dev for something <strong>awesome</strong> coming up..</p>
             </div>
             <div class="skill-row">
-                <img class="camimg" src="images2/photography.png" alt="photography" >
+                <img class="camimg" src="images/photography.png" alt="photography" >
                 <h3>Photography</h3>
                 <p> Loves photography and getting better day by day.😉</p>
             </div>
